@@ -548,7 +548,7 @@ AC_CACHE_VAL(ac_cv_c_strptime_needs_defs,
 [
 cat >conftest.c <<EOF
 #include <time.h>
-void testing (void) { struct tm t; char *timestr; strptime(timestr, "%Y%m", &t); }
+int testing (void) { struct tm t; const char *timestr="201201"; return strptime(timestr, "%Y%m", &t) != 0; }
 EOF
 if test -z "`$CC -Wall -Werror -c conftest.c 2>&1`"; then
 eval "ac_cv_c_strptime_needs_defs=no"
