@@ -1,5 +1,6 @@
 20 January 2012: Wouter
 	- Fix bug #430: segfault when MAX_INTERFACES set to more than 65K.
+	- Fix configure for OpenIndiana sunos 5.11, acx_nlnetlabs.m4 update.
 
 12 January 2012: Matthijs
         - Fix bug #421: truncate pidfile on shutdown, before unlink.
